# IP_ListCompressor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
docs/: ListCompressor.vpp
include/: Compressor.hpp  ConfigurationManager.hpp  ConfigurationProvider.hpp  DataProvider.hpp  DataProviderConfig.hpp  Host.hpp  OutputManagerConfig.hpp  Range.hpp  RecordsProducer.hpp
lib/: BS_thread_pool.hpp
src/: CMakeLists.txt  Compressor.cpp  ConfigurationManager.cpp  ConfigurationProvider.cpp  ConverterFacade.cpp  ConverterFacade.hpp  DataProvider.cpp  DataSource.cpp  Host.cpp  OutputManager.cpp  Range.cpp  RecordsProducer.cpp  Subnet.cpp  consts.hpp  main.cpp
src/common/: CMakeLists.txt
src/common/ip_entity/: CMakeLists.txt  Host.hpp  Range.hpp  Subnet.hpp  ip_entity.hpp
src/common/ip_entity/subnet_transformer/: CMakeLists.txt  SubnetTransformer.hpp  SubnetTransformerIPv4.cpp  SubnetTransformerIPv4.hpp
src/common/ip_entity/subnet_transformer/tests/: CMakeLists.txt  TestSubnetTransformer.cpp
src/common/logging/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/common/utils/: BuilderUtils.hpp
src/configuration/: CMakeLists.txt  Configuration.hpp  ConfigurationProvider.cpp  ConfigurationProvider.hpp  transformers.hpp  validators.hpp
src/configuration/tests/: CMakeLists.txt  TestConfigurationProvider.cpp
src/conversion/: CMakeLists.txt  ConversionCommons.hpp  Converter.cpp  Converter.hpp  ConverterBuilder.cpp  ConverterBuilder.hpp  ConverterConfig.hpp  ConverterIPv4.cpp  ConverterIPv4.hpp  ConvertingStrategy.hpp  consts.hpp
src/conversion/compression/: Compressor.hpp
src/conversion/fetching/: CMakeLists.txt  DataFetcher.cpp  DataFetcher.hpp  DataFetcherBuilder.hpp  DataFetcherConfig.hpp  DataFetcherIPv4.cpp  DataFetcherIPv4.hpp
src/conversion/fetching/ip_v4/: CMakeLists.txt  DataFetcherIPv4.cpp  DataFetcherIPv4.hpp
src/conversion/fetching/ip_v4/tests/: CMakeLists.txt  TestDataFetcherIPv4.cpp
src/conversion/fetching/tests/: CMakeLists.txt  TestDataFetcher.cpp  TestDataFetcherIPv4.cpp
src/conversion/ip/: IPText.hpp
src/conversion/ip/ip_v4/: IPv4Text.hpp  consts.hpp
src/conversion/ip_entity/: AddressTransformer.hpp  CMakeLists.txt  HostAbstract.hpp  IPRecord.hpp  IPText.hpp  Range.hpp  RangeAbstract.hpp  SubnetAbstract.hpp  consts.hpp
src/conversion/ip_entity/ip_v4/: AddressTransformerIPv4.cpp  AddressTransformerIPv4.hpp  CMakeLists.txt  HostIPv4.hpp  IPv4Text.hpp  RangeIPv4.cpp  RangeIPv4.hpp  SubnetIPv4.cpp  SubnetIPv4.hpp  SubnetTransformerIPv4.cpp
src/conversion/purification/: CMakeLists.txt  Purifier.hpp
src/conversion/ranges_decomposition/: CMakeLists.txt  RangeDecomposer.hpp
src/conversion/tests/: CMakeLists.txt  TestConverter.cpp
src/converting/: CMakeLists.txt  Compressor.hpp  ConverterImp.hpp  Decomposer.hpp  Purifier.hpp
src/converting/commons/: CMakeLists.txt  Range.hpp  RangeAbstract.hpp
src/converting/commons/ip_v4/: AddressMakerIPv4.cpp  AddressMakerIPv4.hpp  HostIPv4.cpp  RangeIPv4.cpp  RangeIPv4.hpp  SubnetIPv4.cpp  SubnetIPv4.hpp  SubnetMaskTransformerIPv4.cpp  SubnetMaskTransformerIPv4.hpp
src/converting/include/: Converter.hpp  ConverterBuilder.hpp
src/convertion/: Converter.hpp  ConverterAbstract.hpp  ConverterBuilder.hpp  Decomposer.hpp  Purifier.hpp
src/input_data_fetching/: CMakeLists.txt  InputDataProvider.cpp  InputDataProvider.hpp
src/ip_entity/: AddressPredicator.hpp  AddressTransformer.hpp  CMakeLists.txt  Host.hpp  HostAbstract.hpp  Range.hpp  RangeAbstract.hpp  Subnet.hpp  SubnetAbstract.hpp  SubnetTransformer.hpp  consts.hpp
src/ip_entity/ip_v4/: AddressPredicatorIPv4.cpp  AddressPredicatorIPv4.hpp  AddressTransformer.cpp  AddressTransformer.hpp  AddressTransformerIPv4.cpp  AddressTransformerIPv4.hpp  CMakeLists.txt  HostIPv4.cpp  HostIPv4.hpp  RangeIPv4.cpp  RangeIPv4.hpp  SubnetIPv4.cpp  SubnetIPv4.hpp  SubnetTransformerIPv4.cpp  SubnetTransformerIPv4.hpp
src/ip_entity/ip_v4/tests/: CMakeLists.txt  TestAddressTransformer.cpp  TestSubnetTransformer.cpp
src/ip_entity/subnet_transformer/: CMakeLists.txt  SubnetTransformerIPv4.cpp  SubnetTransformerIPv4.hpp
src/ip_entity/tests/: CMakeLists.txt  TestSubnetTransformer.cpp
src/logging/: Logger.cpp  Logger.hpp
src/old/: ConfigurationManagerBase.cpp  RawRecordsRecognizer.cpp
src/old/include/: ConfigurationManagerBase.hpp  DataSource.hpp  DataSourceConfig.hpp  OutputManager.hpp  RawRecordsRecognizer.hpp  Record.hpp  RecordType.hpp  Subnet.hpp  consts.hpp
src/presentation/: AddressTransformer.hpp  CMakeLists.txt  IPText.hpp  Presenter.hpp  PresenterBuilder.cpp  PresenterBuilder.hpp  PresenterConfig.hpp
src/presentation/ip_v4/: AddressTransformerIPv4.cpp  AddressTransformerIPv4.hpp  CMakeLists.txt
src/presentation/ip_v4/test/: CMakeLists.txt  TestAddressTransformer.cpp
src/utils/: BuilderUtils.hpp  SubnetUtils.hpp
tests/: ListGenerator.py
tests/src/: CMakeLists.txt  TestCompressor.cpp  TestRange.cpp  TestRawRecordsRecognizer.cpp  TestRecordsProducer.cpp
